--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -268,6 +268,7 @@ feeAmount.numDaysEnd.label=Nr of days end
 feeAmount.numDays.label=Nr of days
 feeAmount.feeAmount.label=Fee amount
 feeAmount.validation.max.message=You exceeded the maximum number of days possible
+feeAmount.validation.end.message=Ending day must be bigger or equal to starting day
 
 # Participant state related messages
 participantState.label=Participant state
