--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -268,6 +268,7 @@ feeAmount.numDaysEnd.label=Nr. dagen eind
 feeAmount.numDays.label=Aantal dagen
 feeAmount.feeAmount.label=Bedrag
 feeAmount.validation.max.message=U heeft het mogelijke maximum aantal dagen overschreden
+feeAmount.validation.end.message=Eind dag moet groter of gelijk zijn aan start dag
 
 # Participant state related messages
 participantState.label=Deelnemer status
