#184: Added email field

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -213,6 +213,7 @@ network.multiple.label=Networks
 network.name.label=Name
 network.comment.label=Comment
 network.url.label=URL
+network.email.label=E-mail
 network.showOnline.label=Show online
 network.showInternal.label=Show internal
 network.chairs.label=Chairs
