--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -213,6 +213,7 @@ network.multiple.label=Netwerken
 network.name.label=Naam
 network.comment.label=Commentaar
 network.url.label=URL
+network.email.label=E-mail
 network.showOnline.label=Online weergeven
 network.showInternal.label=Intern weergeven
 network.chairs.label=Chairs
