#167: Fixed IE JavaScript bug

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -217,7 +217,7 @@ network.email.label=E-mail
 network.showOnline.label=Show online
 network.showInternal.label=Show internal
 network.chairs.label=Chairs
-network.not.in.participants.label=Participants not in network
+network.not.in.participants.label=Participants in this network not in a session
 
 # Network chair related messages
 networkChair.chair.label=Chair
