--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -217,7 +217,7 @@ network.email.label=E-mail
 network.showOnline.label=Online weergeven
 network.showInternal.label=Intern weergeven
 network.chairs.label=Chairs
-network.not.in.participants.label=Deelnemer niet in netwerk
+network.not.in.participants.label=Deelnemers in dit netwerk niet in een sessie
 
 # Network chair related messages
 networkChair.chair.label=Chair
