Fixed: #231: Improved please wait message for session edit page #233: Improved participant sorting on session pages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -34,6 +34,7 @@ default.totals.filtered=Total (with filters)
 default.totals.not.filtered=Total (without filters)
 default.last.updated=Last updated
 default.back.to.top=Back to top
+default.please.wait=Please wait...
 
 default.created.message={0} "{1}" is created
 default.updated.message={0} "{1}" is updated
