--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -34,6 +34,7 @@ default.totals.filtered=Totaal (met filters)
 default.totals.not.filtered=Totaal (zonder filters)
 default.last.updated=Laatste update
 default.back.to.top=Terug naar de top
+default.please.wait=\u00c9\u00e9n moment graag...
 
 default.created.message={0} "{1}" is ingevoerd
 default.updated.message={0} "{1}" is gewijzigd
