#235: Particpants on network page are now a link #234: Sessions on network page are now a link #236: Particpants on session page are now a link #243: Participant page has a new tab with session related information

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -310,6 +310,7 @@ participantType.multiple.label=Participant types
 participantType.type.label=Type
 participantType.withPaper.label=With paper
 participantType.importance.label=Importance
+participantType.function.label=Function in session
 
 # Extra related messages
 extra.label=Extra
