--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -310,6 +310,7 @@ participantType.multiple.label=Deelnemer types
 participantType.type.label=Type
 participantType.withPaper.label=Met document
 participantType.importance.label=Belangrijkheid
+participantType.function.label=Functie in sessie
 
 # Extra related messages
 extra.label=Extra
