#247: Implemented new 'Change Paper State' page, including new interactive element feature for dynamic pages.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -62,6 +62,7 @@ default.delete.label=Delete {0}
 default.new.label=New {0}
 default.create.label=Create {0}
 default.edit.label={0} (Edit)
+default.change.label=Change {0}
 default.overview.label={0}
 default.send.label=Send {0}
 default.load.label=Load {0}
@@ -69,6 +70,7 @@ default.plan.label=Plan {0}
 default.edit.menu.label=Edit menu
 default.overview.menu.label=Overviews menu
 default.admin.menu.label=Admin menu
+default.misc.menu.label=Misc
 
 default.enabled.label=Visible
 default.deleted.label=Delete
