--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -63,12 +63,14 @@ default.new.label=Invoeren {0}
 default.create.label=Invoeren {0}
 default.edit.label={0} (Wijzigen)
 default.send.label=Verstuur {0}
+default.change.label=Verander {0}
 default.load.label=Laad {0}
 default.overview.label={0}
 default.plan.label=Plan {0} (Klik)
 default.edit.menu.label=Wijzigingen menu
 default.overview.menu.label=Overzichten menu
 default.admin.menu.label=Admin menu
+default.misc.menu.label=Misc
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
