misc pages titles

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -396,3 +396,15 @@ email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
 email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
+
+# Misc related pages
+misc.lastNameUpperCase=Last name lower/upper case
+misc.firstNameUpperCase=First name lower/upper case
+misc.cityUpperCase=City lower/upper case
+misc.organisationUpperCase=Organisation lower/upper case
+misc.sessionSameName=Sessions with same name
+misc.sessionWithoutNetwork=Sessions without network
+misc.sessionCoAuthor=Sessions with co-authors
+misc.paperSameTitle=Papers with same title
+misc.multiplePapers=Multiple papers
+misc.authorDelSession=Authors in deleted sessions
