- Fixed misc table layout problems - Added Award misc page - First fixes for co-authors filter

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -408,3 +408,4 @@ misc.sessionCoAuthor=Sessions with co-authors
 misc.paperSameTitle=Papers with same title
 misc.multiplePapers=Multiple papers
 misc.authorDelSession=Authors in deleted sessions
+misc.award=Award
