--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -287,7 +287,7 @@ participantDate.feeState.label=Current fee state
 participantDate.dateAdded.label=Event date added
 participantDate.invitationLetter.label=Requested
 participantDate.invitationLetterSent.label=Sent
-participantDate.inventationLetter.label=Inventation letter
+participantDate.inventationLetter.label=Invitation letter
 participantDate.lowerFeeRequested.label=Requested
 participantDate.lowerFeeAnswered.label=Answered
 participantDate.lowerFee.label=Lower fee
