--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -194,7 +194,7 @@ event.longName.label=Lange naam
 event.type.label=Type
 
 # Event date related messages
-eventDate.label=Evenement datum
+eventDate.label=Datum evenement
 eventDate.multiple.label=Data
 eventDate.yearCode.label=Jaar code
 eventDate.startDate.label=Start datum
@@ -258,8 +258,8 @@ session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
 
 # Fee state related messages
-feeState.label=Vergoedings status
-feeState.multiple.label=Vergoedings statussen
+feeState.label=Vergoedingsstatus
+feeState.multiple.label=Vergoedingsstatussen
 feeState.name.label=Naam
 feeState.isDefaultFee.label=Is standaard vergoeding
 
@@ -283,11 +283,11 @@ participantState.state.label=Status
 participantDate.label=Deelnemer
 participantDate.multiple.label=Deelnemers
 participantDate.state.label=Huidige status
-participantDate.feeState.label=Huidige vergoedings status
-participantDate.dateAdded.label=Evenement datum toegevoegd
+participantDate.feeState.label=Huidige vergoedingsstatus
+participantDate.dateAdded.label=Datum evenement toegevoegd
 participantDate.invitationLetter.label=Aangevraagd
 participantDate.invitationLetterSent.label=Verzonden
-participantDate.inventationLetter.label=Uitnodigings brief
+participantDate.inventationLetter.label=Uitnodigingsbrief
 participantDate.lowerFeeRequested.label=Aangevraagd
 participantDate.lowerFeeAnswered.label=Beantwoord
 participantDate.lowerFee.label=Lagere vergoeding
@@ -299,8 +299,8 @@ participantDate.award.label=Deelname voor award
 participantDate.registration.info.label=Registratie info
 participantDate.personal.info.label=Persoonlijke info
 participantDate.extra.label=Extra
-participantDate.attendance.label=Aaanwezigheid
-participantDate.volunteering.label=Vrijwilliger mogelijkheden
+participantDate.attendance.label=Aanwezigheid
+participantDate.volunteering.label=Vrijwillige taken
 participantDate.volunteering.select.label=Zou willen zijn
 participantDate.volunteering.add.label=als vrijwilliger
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
