Fixed several issues

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -202,6 +202,7 @@ eventDate.endDate.label=End date
 eventDate.dateAsText.label=Date as text
 eventDate.description.label=Description
 eventDate.longDescription.label=Long description
+eventDate.createStatistics.label=Create statistics
 
 # Day related messages
 day.label=Day
