--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -202,6 +202,7 @@ eventDate.endDate.label=Eind datum
 eventDate.dateAsText.label=Datum als tekst
 eventDate.description.label=Beschrijving
 eventDate.longDescription.label=Lange beschrijving
+eventDate.createStatistics.label=Maak statistieken
 
 # Day related messages
 day.label=Dag
