- #290: All select boxes for session state and paper state are replaced by radio buttons - #293: Toggle button added to network page to hide participants in session - ParticipantSessionInfo JSON maps code clones cleaned up - Updated jQuery and jQuery UI

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -66,7 +66,8 @@ default.send.label=Verstuur {0}
 default.change.label=Verander {0}
 default.load.label=Laad {0}
 default.overview.label={0}
-default.plan.label=Plan {0} (Klik)
+default.plan.label=Plan {0}
+default.toggle.label=Laat zien/verberg {0}
 default.edit.menu.label=Wijzigingen menu
 default.overview.menu.label=Overzichten menu
 default.admin.menu.label=Admin menu
