--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -67,6 +67,7 @@ default.overview.label={0}
 default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
+default.toggle.label=Show/hide {0}
 default.edit.menu.label=Edit menu
 default.overview.menu.label=Overviews menu
 default.admin.menu.label=Admin menu
