--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -258,6 +258,7 @@ session.abstr.label=Abstract
 session.comment.label=Comment
 session.state.label=Session state
 session.sessionParticipants.label=Participants in session
+session.mismatch.label=Mismatch Session/Paper state
 
 # Fee state related messages
 feeState.label=Fee state
@@ -305,6 +306,7 @@ participantDate.attendance.label=Attendance
 participantDate.volunteering.label=Volunteering
 participantDate.volunteering.select.label=Would like to be
 participantDate.volunteering.add.label=as volunteer
+participantDate.gender.unknown.label=Gender unknown
 participantDate.not.yet.registered.message=This user is not registered for "{0}".
 participantDate.would.like.to.add.message=Would you like to add this user as a participant?
 
