--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -258,6 +258,7 @@ session.abstr.label=Abstract
 session.comment.label=Commentaar
 session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
+session.mismatch.label=Mismatch Sessie/Document status
 
 # Fee state related messages
 feeState.label=Vergoedingsstatus
@@ -305,6 +306,7 @@ participantDate.attendance.label=Aanwezigheid
 participantDate.volunteering.label=Vrijwillige taken
 participantDate.volunteering.select.label=Zou willen zijn
 participantDate.volunteering.add.label=als vrijwilliger
+participantDate.gender.unknown.label=Geslacht onbekend
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
 participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
 
