#318: New page created: not registered chairs

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -413,3 +413,4 @@ misc.paperSameTitle=Papers with same title
 misc.multiplePapers=Multiple papers
 misc.authorDelSession=Authors in deleted sessions
 misc.award=Award
+misc.notRegisteredChairs=Not Registered Chairs
