--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -400,3 +400,17 @@ email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
 email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
+
+# Misc related pages
+misc.lastNameUpperCase=Last name lower/upper case
+misc.firstNameUpperCase=First name lower/upper case
+misc.cityUpperCase=City lower/upper case
+misc.organisationUpperCase=Organisation lower/upper case
+misc.sessionSameName=Sessions with same name
+misc.sessionWithoutNetwork=Sessions without network
+misc.sessionCoAuthor=Sessions with co-authors
+misc.paperSameTitle=Papers with same title
+misc.multiplePapers=Multiple papers
+misc.authorDelSession=Authors in deleted sessions
+misc.award=Award
+misc.notRegisteredChairs=Not Registered Chairs
