#312: Changed some i18n labels

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -68,10 +68,11 @@ default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
-default.edit.menu.label=Edit menu
-default.overview.menu.label=Overviews menu
-default.admin.menu.label=Admin menu
-default.misc.menu.label=Misc
+default.edit.menu.label=Edit menu »
+default.overview.menu.label=Overviews menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
+default.export.menu.label=Export »
 
 default.enabled.label=Visible
 default.deleted.label=Delete
