--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -68,10 +68,11 @@ default.load.label=Laad {0}
 default.overview.label={0}
 default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
-default.edit.menu.label=Wijzigingen menu
-default.overview.menu.label=Overzichten menu
-default.admin.menu.label=Admin menu
-default.misc.menu.label=Misc
+default.edit.menu.label=Wijzigingen menu »
+default.overview.menu.label=Overzichten menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
+default.export.menu.label=Exporteer »
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
