--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -415,3 +415,4 @@ misc.multiplePapers=Multiple papers
 misc.authorDelSession=Authors in deleted sessions
 misc.award=Award
 misc.notRegisteredChairs=Not Registered Chairs
+misc.multipleAccPapers=Multiple accepted papers
