#319: Redesign of authorization groups edit page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -226,6 +226,8 @@ network.chairs.label=Chairs
 network.not.in.participants.label=Participants in this network not in a session
 
 # Network chair related messages
+networkChair.label=Network chair
+networkChair.multiple.label=Network chairs
 networkChair.chair.label=Chair
 networkChair.isMainChair.label=Main chair
 
@@ -381,6 +383,9 @@ emailTemplate.testAfterSave.label=Test email after save
 group.label=Group
 group.multiple.label=Authorization groups
 group.name.label=Name
+group.pagesInGroup.label=Pages in this group
+group.pagesNotInGroup.label=Pages not in this group
+group.select.label=Move selected items to {0}
 
 # Page related messages
 page.label=Page
