--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -226,6 +226,8 @@ network.chairs.label=Chairs
 network.not.in.participants.label=Deelnemers in dit netwerk niet in een sessie
 
 # Network chair related messages
+networkChair.label=Netwerk chair
+networkChair.multiple.label=Netwerk chairs
 networkChair.chair.label=Chair
 networkChair.isMainChair.label=Hoofd chair
 
@@ -381,6 +383,9 @@ emailTemplate.testAfterSave.label=Na opslaan e-mail testen
 group.label=Groep
 group.multiple.label=Autorisatie groepen
 group.name.label=Naam
+group.pagesInGroup.label=Pagina's in deze groep
+group.pagesNotInGroup.label=Pagina's niet in deze groep
+group.select.label=Verplaats geselecteerde items naar {0}
 
 # Page related messages
 page.label=Pagina
