Minor changes to group authorization edit page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -68,6 +68,8 @@ default.send.label=Send {0}
 default.load.label=Load {0}
 default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
+default.add.selected.label=Add selected item(s) to "{0}"
+default.remove.selected.label=Remove selected item(s) from "{0}"
 default.edit.menu.label=Edit menu »
 default.overview.menu.label=Overviews menu »
 default.admin.menu.label=Admin menu »
@@ -385,7 +387,6 @@ group.multiple.label=Authorization groups
 group.name.label=Name
 group.pagesInGroup.label=Pages in this group
 group.pagesNotInGroup.label=Pages not in this group
-group.select.label=Move selected items to {0}
 
 # Page related messages
 page.label=Page
