--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -68,6 +68,8 @@ default.load.label=Laad {0}
 default.overview.label={0}
 default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
+default.add.selected.label=Voeg geselecteerde item(s) toe aan "{0}"
+default.remove.selected.label=Verwijder geselecteerde item(s) van "{0}"
 default.edit.menu.label=Wijzigingen menu »
 default.overview.menu.label=Overzichten menu »
 default.admin.menu.label=Admin menu »
@@ -385,7 +387,6 @@ group.multiple.label=Autorisatie groepen
 group.name.label=Naam
 group.pagesInGroup.label=Pagina's in deze groep
 group.pagesNotInGroup.label=Pagina's niet in deze groep
-group.select.label=Verplaats geselecteerde items naar {0}
 
 # Page related messages
 page.label=Pagina
