#314: Network chairs list created

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -423,3 +423,4 @@ misc.authorDelSession=Authors in deleted sessions
 misc.award=Award
 misc.notRegisteredChairs=Not Registered Chairs
 misc.multipleAccPapers=Multiple accepted papers
+misc.chairs=All chairs
