Fixed char encoding of i18n files

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,11 +70,11 @@ default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
 default.add.selected.label=Add selected item(s) to "{0}"
 default.remove.selected.label=Remove selected item(s) from "{0}"
-default.edit.menu.label=Edit menu \u00c2\u00bb
-default.overview.menu.label=Overviews menu \u00c2\u00bb
-default.admin.menu.label=Admin menu \u00c2\u00bb
-default.misc.menu.label=Misc \u00c2\u00bb
-default.export.menu.label=Export \u00c2\u00bb
+default.edit.menu.label=Edit menu »
+default.overview.menu.label=Overviews menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
+default.export.menu.label=Export »
 
 default.enabled.label=Visible
 default.deleted.label=Delete
