--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -70,11 +70,11 @@ default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
 default.add.selected.label=Voeg geselecteerde item(s) toe aan "{0}"
 default.remove.selected.label=Verwijder geselecteerde item(s) van "{0}"
-default.edit.menu.label=Wijzigingen menu \u00c2\u00bb
-default.overview.menu.label=Overzichten menu \u00c2\u00bb
-default.admin.menu.label=Admin menu \u00c2\u00bb
-default.misc.menu.label=Misc \u00c2\u00bb
-default.export.menu.label=Exporteer \u00c2\u00bb
+default.edit.menu.label=Wijzigingen menu »
+default.overview.menu.label=Overzichten menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
+default.export.menu.label=Exporteer »
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
