Create XML exports for program book

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -74,7 +74,7 @@ default.edit.menu.label=Edit menu »
 default.overview.menu.label=Overviews menu »
 default.admin.menu.label=Admin menu »
 default.misc.menu.label=Misc »
-default.export.menu.label=Export »
+default.export.menu.label=Export
 
 default.enabled.label=Visible
 default.deleted.label=Delete
