--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -74,7 +74,7 @@ default.edit.menu.label=Wijzigingen menu »
 default.overview.menu.label=Overzichten menu »
 default.admin.menu.label=Admin menu »
 default.misc.menu.label=Misc »
-default.export.menu.label=Exporteer »
+default.export.menu.label=Exporteer
 
 default.enabled.label=Zichtbaar
 default.deleted.label=Verwijderen
