--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -294,9 +294,9 @@ participantDate.multiple.label=Participants
 participantDate.state.label=Current state
 participantDate.feeState.label=Current fee state
 participantDate.dateAdded.label=Event date added
-participantDate.invitationLetter.label=Requested
+participantDate.invitationLetterRequested.label=Requested
 participantDate.invitationLetterSent.label=Sent
-participantDate.inventationLetter.label=Invitation letter
+participantDate.invitationLetter.label=Invitation letter
 participantDate.lowerFeeRequested.label=Requested
 participantDate.lowerFeeAnswered.label=Answered
 participantDate.lowerFee.label=Lower fee
@@ -359,7 +359,7 @@ paperState.description.label=Description
 # Session date/time related messages
 sessionDateTime.label=Date/time
 sessionDateTime.multiple.label=Dates/times
-sessionDateTime.index.label=Index
+sessionDateTime.indexNumber.label=Index
 sessionDateTime.period.label=Period
 
 # Email code related messages
