--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -294,9 +294,9 @@ participantDate.multiple.label=Deelnemers
 participantDate.state.label=Huidige status
 participantDate.feeState.label=Huidige vergoedingsstatus
 participantDate.dateAdded.label=Datum evenement toegevoegd
-participantDate.invitationLetter.label=Aangevraagd
+participantDate.invitationLetterRequested.label=Aangevraagd
 participantDate.invitationLetterSent.label=Verzonden
-participantDate.inventationLetter.label=Uitnodigingsbrief
+participantDate.invitationLetter.label=Uitnodigingsbrief
 participantDate.lowerFeeRequested.label=Aangevraagd
 participantDate.lowerFeeAnswered.label=Beantwoord
 participantDate.lowerFee.label=Lagere vergoeding
@@ -359,7 +359,7 @@ paperState.description.label=Beschrijving
 # Session date/time related messages
 sessionDateTime.label=Datum/tijd
 sessionDateTime.multiple.label=Data/tijden
-sessionDateTime.index.label=Index
+sessionDateTime.indexNumber.label=Index
 sessionDateTime.period.label=Periode
 
 # Email code related messages
