#337: New view: Participants with same name

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -424,3 +424,4 @@ misc.award=Award
 misc.notRegisteredChairs=Not Registered Chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=Alle chairs
+misc.participantsSameName=Deelnemers met dezelfde naam
