--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -424,3 +424,4 @@ misc.award=Award
 misc.notRegisteredChairs=Not Registered Chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=All chairs
+misc.participantsSameName=Participants with the same name
