#356: show personal page link in participant edit page

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -315,6 +315,7 @@ participantDate.volunteering.add.label=as volunteer
 participantDate.gender.unknown.label=Gender unknown
 participantDate.not.yet.registered.message=This user is not registered for "{0}".
 participantDate.would.like.to.add.message=Would you like to add this user as a participant?
+participantDate.show.personal.page.message=Show personal page
 
 # Participant type related messages
 participantType.label=Participant type
