--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -315,6 +315,7 @@ participantDate.volunteering.add.label=als vrijwilliger
 participantDate.gender.unknown.label=Geslacht onbekend
 participantDate.not.yet.registered.message=Deze gebruiker is nog niet geregistreerd voor "{0}".
 participantDate.would.like.to.add.message=Wilt u deze gebruiker als deelnemer toevoegen?
+participantDate.show.personal.page.message=Persoonlijke pagina bekijken
 
 # Participant type related messages
 participantType.label=Deelnemer type
