#344: show equipment in room show

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -426,3 +426,4 @@ misc.notRegisteredChairs=Not Registered Chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=Alle chairs
 misc.participantsSameName=Deelnemers met dezelfde naam
+misc.sessionsWithoutOrganizer=Sessies zonder organizer
