--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -426,3 +426,4 @@ misc.notRegisteredChairs=Not Registered Chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=All chairs
 misc.participantsSameName=Participants with the same name
+misc.sessionsWithoutOrganizer=Sessions without Organizer
