#353: Change text: email must be unique

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -13,7 +13,7 @@ default.not.inlist.message={0} with value "{2}" is not contained within the list
 default.blank.message={0} cannot be blank
 default.not.equal.message={0} with value "{2}" cannot equal "{3}"
 default.null.message={0} cannot be empty
-default.not.unique.message={0} with value "{2}" must be unique
+default.not.unique.message={0} cannot be changed. {0} must be unique. There is another with {0} "{2}"
 default.exists.message="{0}" already exists as {1}
 
 default.paginate.prev=Previous
