--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -13,7 +13,7 @@ default.not.inlist.message={0} met waarde "{2}" komt niet voor in de lijst {3}
 default.blank.message={0} mag niet leeg zijn
 default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
 default.null.message={0} mag niet leeg zijn
-default.not.unique.message={0} met waarde "{2}" moet uniek zijn
+default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al één met {0} "{2}"
 default.exists.message="{0}" bestaat al als {1}
 
 default.paginate.prev=Vorige
