Several small issues fixed and start of session book export implemented

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -266,6 +266,12 @@ session.sessionParticipants.label=Participants in session
 session.mismatch.label=Mismatch Session/Paper state
 session.unschedule.label=Unschedule
 
+sessionList.label=Session
+sessionList.multiple.label=Sessions
+sessionList.code.label=Code
+sessionList.name.label=Name
+sessionList.state.label=Session state
+
 # Fee state related messages
 feeState.label=Fee state
 feeState.multiple.label=Fee states
