--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -266,6 +266,12 @@ session.sessionParticipants.label=Deelnemers in sessie
 session.mismatch.label=Mismatch Sessie/Document status
 session.unschedule.label=Schrap planning
 
+sessionList.label=Sessie
+sessionList.multiple.label=Sessies
+sessionList.code.label=Code
+sessionList.name.label=Naam
+sessionList.state.label=Sessie status
+
 # Fee state related messages
 feeState.label=Vergoedingsstatus
 feeState.multiple.label=Vergoedingsstatussen
