#341: Language errors fixed

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -263,7 +263,7 @@ session.abstr.label=Abstract
 session.comment.label=Comment
 session.state.label=Session state
 session.sessionParticipants.label=Participants in session
-session.mismatch.label=Mismatch Session/Paper state
+session.mismatch.label=Mismatch session/paper state
 session.unschedule.label=Unschedule
 
 sessionList.label=Session
@@ -428,8 +428,8 @@ misc.paperSameTitle=Papers with same title
 misc.multiplePapers=Multiple papers
 misc.authorDelSession=Authors in deleted sessions
 misc.award=Award
-misc.notRegisteredChairs=Not Registered Chairs
+misc.notRegisteredChairs=Not registered chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=All chairs
 misc.participantsSameName=Participants with the same name
-misc.sessionsWithoutOrganizer=Sessions without Organizer
+misc.sessionsWithoutOrganizer=Sessions without organizer
