--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -263,7 +263,7 @@ session.abstr.label=Abstract
 session.comment.label=Commentaar
 session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
-session.mismatch.label=Mismatch Sessie/Document status
+session.mismatch.label=Mismatch sessie/document status
 session.unschedule.label=Schrap planning
 
 sessionList.label=Sessie
@@ -428,7 +428,7 @@ misc.paperSameTitle=Papers with same title
 misc.multiplePapers=Multiple papers
 misc.authorDelSession=Authors in deleted sessions
 misc.award=Award
-misc.notRegisteredChairs=Not Registered Chairs
+misc.notRegisteredChairs=Not registered chairs
 misc.multipleAccPapers=Multiple accepted papers
 misc.chairs=Alle chairs
 misc.participantsSameName=Deelnemers met dezelfde naam
