#6: Check for conflicts in currently planned sessions

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -265,6 +265,12 @@ session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
 session.mismatch.label=Mismatch sessie/document status
 session.unschedule.label=Schrap planning
+session.conflicts.searching.label=Op zoek naar conflicten in de huidige planning
+session.no.conflicts.label=Geen conflicten gevonden in de huidige planning
+session.conflics.found.label=De volgende conflicten zijn gevonden in de huidige planning:
+session.noShow.label=heeft deelnemers die niet beschikbaar zijn op de geplande dag en tijd
+session.sessionConflict.label=heeft tenminste één deelnemer die ook gepland is op dezelfde dag en tijd in de sessie
+session.equipmentProblem.label=vereist apparatuur dat niet beschikbaar is op de geplande dag en tijd in de ruimte
 
 sessionList.label=Sessie
 sessionList.multiple.label=Sessies
