--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -265,6 +265,12 @@ session.state.label=Session state
 session.sessionParticipants.label=Participants in session
 session.mismatch.label=Mismatch session/paper state
 session.unschedule.label=Unschedule
+session.conflicts.searching.label=Searching for conflicts in the current planning
+session.no.conflicts.label=No conflicts found in the current planning
+session.conflics.found.label=The following conflicts were found in the current planning:
+session.noShow.label=has participants not present at the scheduled date and time
+session.sessionConflict.label=has at least one participant that is also scheduled at the same date and time in session
+session.equipmentProblem.label=requires equipment that is not available in the scheduled room
 
 sessionList.label=Session
 sessionList.multiple.label=Sessions
