Improved conflicts checking for the session planner

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,10 +70,10 @@ default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
 default.add.selected.label=Add selected item(s) to "{0}"
 default.remove.selected.label=Remove selected item(s) from "{0}"
-default.edit.menu.label=Edit menu Â»
-default.overview.menu.label=Overviews menu Â»
-default.admin.menu.label=Admin menu Â»
-default.misc.menu.label=Misc Â»
+default.edit.menu.label=Edit menu »
+default.overview.menu.label=Overviews menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
 default.export.menu.label=Export
 
 default.enabled.label=Visible
@@ -269,7 +269,7 @@ session.conflicts.searching.label=Searching for conflicts in the current plannin
 session.no.conflicts.label=No conflicts found in the current planning
 session.conflics.found.label=The following conflicts were found in the current planning:
 session.noShow.label=has participants not present at the scheduled date and time
-session.sessionConflict.label=has at least one participant that is also scheduled at the same date and time in session
+session.sessionConflict.label=has at least one participant that is also scheduled at the same date and time in the session(s)
 session.equipmentProblem.label=requires equipment that is not available in the scheduled room
 
 sessionList.label=Session
