--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -70,10 +70,10 @@ default.plan.label=Plan {0}
 default.toggle.label=Show/hide {0}
 default.add.selected.label=Add selected item(s) to "{0}"
 default.remove.selected.label=Remove selected item(s) from "{0}"
-default.edit.menu.label=Edit menu »
-default.overview.menu.label=Overviews menu »
-default.admin.menu.label=Admin menu »
-default.misc.menu.label=Misc »
+default.edit.menu.label=Edit menu Â»
+default.overview.menu.label=Overviews menu Â»
+default.admin.menu.label=Admin menu Â»
+default.misc.menu.label=Misc Â»
 default.export.menu.label=Export
 
 default.enabled.label=Visible
