#382, #384: Network URL is not required anymore and users have a new textfield to enter CVs.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -183,6 +183,7 @@ user.fax.label=Fax
 user.mobile.label=Mobile phone
 user.organisation.label=Organisation
 user.department.label=Department
+user.cv.label=CV
 user.extraInfo.label=Extra information
 user.dateAdded.label=Date added
 user.personalInfo.label=Personal information
