--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -183,6 +183,7 @@ user.fax.label=Fax
 user.mobile.label=Mobiel nummer
 user.organisation.label=Organisatie
 user.department.label=Afdeling
+user.cv.label=CV
 user.extraInfo.label=Extra informatie
 user.dateAdded.label=Datum toegevoegd
 user.personalInfo.label=Persoonlijke informatie
