#390: send emails redesigned #399: In progress

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -421,6 +421,10 @@ email.info.label=Returned info:
 email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
+email.all.participants.label=Send to all participants
+email.select.label=Select type of mail recipients
+email.edit.template.label=Edit template in a new window
+email.refresh.preview.label=Refresh email preview
 email.background.message=E-mail for {0} participant(s) is being processed in the background, you may leave this page
 
 # Misc related pages
