--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -421,6 +421,10 @@ email.info.label=Geretourneerde info:
 email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
+email.all.participants.label=Verstuur naar alle deelnemers
+email.select.label=Selecteer type mail ontvangers
+email.edit.template.label=Wijzig template in een nieuw tabblad
+email.refresh.preview.label=Herlaad email preview
 email.background.message=E-mail voor {0} deelnemer(s) worden in de achtergrond verwerkt, u mag deze pagina verlaten
 
 # Misc related pages
