--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -422,6 +422,7 @@ email.test.label=Send test mail
 email.send.label=Send e-mail
 email.send.multiple.label=Send e-mails
 email.all.participants.label=Send to all participants
+email.all.network.chairs.label=Send to all network chairs
 email.select.label=Select type of mail recipients
 email.edit.template.label=Edit template in a new window
 email.refresh.preview.label=Refresh email preview
