--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -422,6 +422,7 @@ email.test.label=Verstuur test mail
 email.send.label=Verstuur e-mail
 email.send.multiple.label=Verstuur e-mails
 email.all.participants.label=Verstuur naar alle deelnemers
+email.all.network.chairs.label=Verstuur naar alle netwerk chairs
 email.select.label=Selecteer type mail ontvangers
 email.edit.template.label=Wijzig template in een nieuw tabblad
 email.refresh.preview.label=Herlaad email preview
