#6: Updated session conflicts messages to include the users in question

--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -13,7 +13,7 @@ default.not.inlist.message={0} met waarde "{2}" komt niet voor in de lijst {3}
 default.blank.message={0} mag niet leeg zijn
 default.not.equal.message={0} met waarde "{2}" mag niet gelijk zijn aan "{3}"
 default.null.message={0} mag niet leeg zijn
-default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al Ã©Ã©n met {0} "{2}"
+default.not.unique.message={0} kan niet worden veranderd. {0} moet uniek zijn. Er is al één met {0} "{2}"
 default.exists.message="{0}" bestaat al als {1}
 
 default.paginate.prev=Vorige
@@ -70,10 +70,10 @@ default.plan.label=Plan {0}
 default.toggle.label=Laat zien/verberg {0}
 default.add.selected.label=Voeg geselecteerde item(s) toe aan "{0}"
 default.remove.selected.label=Verwijder geselecteerde item(s) van "{0}"
-default.edit.menu.label=Wijzigingen menu Â»
-default.overview.menu.label=Overzichten menu Â»
-default.admin.menu.label=Admin menu Â»
-default.misc.menu.label=Misc Â»
+default.edit.menu.label=Wijzigingen menu »
+default.overview.menu.label=Overzichten menu »
+default.admin.menu.label=Admin menu »
+default.misc.menu.label=Misc »
 default.export.menu.label=Exporteer
 
 default.enabled.label=Zichtbaar
@@ -269,8 +269,8 @@ session.unschedule.label=Schrap planning
 session.conflicts.searching.label=Op zoek naar conflicten in de huidige planning
 session.no.conflicts.label=Geen conflicten gevonden in de huidige planning
 session.conflics.found.label=De volgende conflicten zijn gevonden in de huidige planning:
-session.noShow.label=heeft deelnemers die niet beschikbaar zijn op de geplande dag en tijd
-session.sessionConflict.label=heeft tenminste Ã©Ã©n deelnemer die ook gepland is op dezelfde dag en tijd in de sessie(s)
+session.noShow.label=is niet beschikbaar op de geplande dag en tijd voor de sessies
+session.sessionConflict.label=is gepland op dezelfde dag en tijd in de sessies
 session.equipmentProblem.label=vereist apparatuur dat niet beschikbaar is op de geplande dag en tijd in de ruimte
 
 sessionList.label=Sessie
