Fixed missing commits

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -188,6 +188,7 @@ user.extraInfo.label=Extra information
 user.dateAdded.label=Date added
 user.personalInfo.label=Personal information
 user.changePassword.label=Change password
+user.emailDiscontinued.label=Email discontinued
 
 # Event related messages
 event.label=Event
