--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -188,6 +188,7 @@ user.extraInfo.label=Extra informatie
 user.dateAdded.label=Datum toegevoegd
 user.personalInfo.label=Persoonlijke informatie
 user.changePassword.label=Wijzig wachtwoord
+user.emailDiscontinued.label=Email opgezegd
 
 # Event related messages
 event.label=Evenement
