#432: Show days participant has selected during final registration #439: Small textual changes

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -266,6 +266,8 @@ session.comment.label=Comment
 session.state.label=Session state
 session.sessionParticipants.label=Participants in session
 session.mismatch.label=Mismatch session/paper state
+session.planned.label=Session is planned
+session.not.planned.label=Session is not planned yet
 session.unschedule.label=Unschedule
 session.conflicts.searching.label=Searching for conflicts in the current planning
 session.no.conflicts.label=No conflicts found in the current planning
@@ -384,13 +386,13 @@ emailCode.code.label=Code
 emailCode.description.label=Description
 emailCode.groovyScript.label=Groovy script
 
-# Email code related messages
+# Email template related messages
 emailTemplate.label=Email template
 emailTemplate.multiple.label=Email templates
 emailTemplate.description.label=Description
-emailTemplate.subject.label=Subject
-emailTemplate.body.label=Body
-emailTemplate.sender.label=Sender
+emailTemplate.subject.label=Mail subject
+emailTemplate.body.label=Mail body
+emailTemplate.sender.label=Sender name
 emailTemplate.comment.label=Comment
 emailTemplate.sortOrder.label=Sort order
 emailTemplate.showInBackend.label=Show in backend
@@ -411,6 +413,14 @@ page.multiple.label=Pages
 # Role related messages
 role.label=Role
 role.multiple.label=Roles
+
+# PartipantDay related messages
+participantDay.label=Participant day
+participantDay.multiple.label=Participant days
+participantDay.user.label=User
+participantDay.day.label=Day
+participantDay.is.present.label=This participant has indicated to be present on the following days:
+participantDay.not.found.label=No days found
 
 # Email related messages
 email.label=E-mail
