--- a/grails-app/i18n/messages_nl.properties
+++ b/grails-app/i18n/messages_nl.properties
@@ -266,6 +266,8 @@ session.comment.label=Commentaar
 session.state.label=Sessie status
 session.sessionParticipants.label=Deelnemers in sessie
 session.mismatch.label=Mismatch sessie/document status
+session.planned.label=Sessie is gepland
+session.not.planned.label=Sessie is nog niet gepland
 session.unschedule.label=Schrap planning
 session.conflicts.searching.label=Op zoek naar conflicten in de huidige planning
 session.no.conflicts.label=Geen conflicten gevonden in de huidige planning
@@ -384,13 +386,13 @@ emailCode.code.label=Code
 emailCode.description.label=Beschrijving
 emailCode.groovyScript.label=Groovy script
 
-# Email code related messages
+# Email template related messages
 emailTemplate.label=E-mail sjabloon
 emailTemplate.multiple.label=E-mail sjablonen
 emailTemplate.description.label=Beschrijving
-emailTemplate.subject.label=Onderwerp
-emailTemplate.body.label=Bericht
-emailTemplate.sender.label=Afzender
+emailTemplate.subject.label=Mail onderwerp
+emailTemplate.body.label=Mail bericht
+emailTemplate.sender.label=Naam afzender
 emailTemplate.comment.label=Commentaar
 emailTemplate.sortOrder.label=Sorteer volgorde
 emailTemplate.showInBackend.label=Tonen in backend
@@ -411,6 +413,14 @@ page.multiple.label=Pagina's
 # Role related messages
 role.label=Rol
 role.multiple.label=Rollen
+
+# PartipantDay related messages
+participantDay.label=Deelnemer dag
+participantDay.multiple.label=Deelnemer dagen
+participantDay.user.label=Gebruiker
+participantDay.day.label=Dag
+participantDay.is.present.label=Deze deelnemer heeft aangegeven op de volgende dagen aanwezig te zijn:
+participantDay.not.found.label=Geen dagen gevonden
 
 # Email related messages
 email.label=E-mail
